<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prefs_file" translatable="false">com.example.passengerapp.PREFERENCE_FILE_KEY</string>
    <string name="app_name" translatable="false">VehicleApp</string>
    <string name="no_devices_found">No BLE devices found</string>
    <string name="chat_title">Chat</string>
    <string name="device_list_title">VehicleApp</string>
    <string name="location_required_error">The location permission is required to support Bluetooth Low Energy communication</string>
    <string name="grant_permission_prompt">Grant Location Permission</string>
    <string name="active_scan_message">Scanning for devices</string>
    <string name="bt_not_enabled">Please enable Bluetooth in order to scan for devices</string>
    <string name="enable_bluetooth_prompt">Enable Bluetooth</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device</string>
    <string name="chat_confirm_message">Would you like to chat with %1$s</string>
    <string name="chat_deny_button">No</string>
    <string name="chat_confirm_button">Yes</string>
    <string name="no_connected_device_message">Not connected to a device</string>
    <string name="connect_device_prompt">Connect with nearby devices</string>
    <string name="send_message_button">Send Message</string>
    <string name="chatting_with_device">Chatting with %1$s</string>
    <string name="your_device_address">Your device address:</string>
    <string name="scanning_header">This device is discoverable</string>


    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="logoutSuccess">Logged out successfully</string>
    <string name="password">Password</string>
    <string name="signUp">Sign up</string>
    <string name="logIn">Log in</string>
    <string name="authentication">Authentication</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="welcome">Welcome</string>
    <string name="userInfo">User info</string>
    <string name="nearbyDevices">Nearby devices</string>
    <string name="buy_vouchers_prompt">Buy vouchers</string>
    <string name="my_vouchers_prompt">My vouchers</string>
    <string name="numzones">Number of zones: </string>
    <string name="numTrips">Number of trips: </string>
    <string name="numPassengers">Number of passengers: </string>
    <string name="totalPrice">Current name: </string>
    <string name="currentPlate">Current plate: </string>
    <string name="pay">Pay</string>
    <string name="zones">Zones</string>
    <string name="trips">Trips</string>
    <string name="tripsBought">Trips successfully bought</string>
    <string name="ok">Ok</string>
    <string name="changeName">Change name</string>
    <string name="changePlate">Change plate</string>
    <string name="changeNameHint">New name</string>
    <string name="changePlateHint">New plate</string>
    <string name="btChangeRestart">BT name changed. Please restart the app.</string>
    <string name="needToRestart">You need to restart the app: </string>
    <string name="needToRestartAnswerYes">YES</string>
    <string name="needToRestartAnswerNo">NO</string>
    <string name="incorrectNameString">Invalid string for a name</string>
    <string name="incorrectPlateString">Invalid string for a plate</string>


    <string-array name="zonesArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="tripsArray">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>

</resources>
